# autonomous-drone-racing

./: .gitignore  README.md  requirements.txt
Gazebo/: racing_arena.world
Gazebo/models/Intel drone/: Intel Drone Propeller - Scaled.blend  Intel Drone Propeller - Scaled.blend1  Intel Drone.mtl  model.config  model.sdf  model.xacro
Gazebo/models/Lab gate/: gate.blend  gate.blend1  gate.mtl
Gazebo/models/custom_gate/: gate.blend  gate_1mx1m_150cm.blend  gate_1mx1m_150cm.blend1  model.config  model.sdf
Meshes/: gate.blend  leddar_mount.blend  leddar_mount.blend1  leddar_mount.stl
RLDrone/: racing_arena.world
RLDrone/aero_control/: CMakeLists.txt  aero_control.cc  aero_control.hh  package.xml
RLDrone/aero_control/src/: aero_control.cpp  aero_control.hpp
RLDrone/aero_control_no_ros/: CMakeLists.txt
RLDrone/aero_control_no_ros/models/aero/: model.sdf
RLDrone/aero_control_no_ros/models/aero_working_standalone/: model.config  model.sdf
RLDrone/aero_control_no_ros/src/: aero_control.cpp  aero_control.hpp
RLDrone/aero_control_no_ros/worlds/: basic.world
RLDrone/intel_aero_model/: aero.sdf  model.config
RLDrone/models/aero/: intel_aero.xacro  intel_aero_base.xacro  model.sdf
RLDrone/reinforcement_learning/: CMakeLists.txt  rl_control.cc  rl_control.hh
RLDrone/rl_drone/: CMakeLists.txt  package.xml
RLDrone/rl_drone/launch/: train.launch
RLDrone/rl_drone/src/: rl_control.cpp  rl_control.hpp
RLDrone/rl_drone/worlds/: basic.world  racing_arena.world
RLDrone/rl_drone_no_ros/: CMakeLists.txt
RLDrone/rl_drone_no_ros/src/: rl_control.cpp  rl_control.hpp
RLDrone/rl_drone_no_ros/worlds/: basic.world
RLDrone/rl_node/: CMakeLists.txt  controller.cpp  controller.hh
SyntheticDatasetFactory/: .gitignore  dataset.py  dataset_factory.py  render.py  scene_generator.py  scene_renderer.py
SyntheticDatasetFactory/data/: batman.mtl  camera_calibration_params.txt  camera_calibration_params.yaml  gate.mtl  gate_1mx1m_150cm.mtl
SyntheticDatasetFactory/utils/: extract_frame_pose.py
center_alignment/controllers/: CMakeLists.txt.user.49305aa  package.xml
center_alignment/controllers/cfg/: PID.cfg~  setDIT2FLC.cfg  setDIT2FLC.cfg~  setDNN.cfg  setFNN.cfg  setNoise.cfg  setNoise.cfg~  setNoise1.cfg  setPID.cfg  setPID.cfg~  setPIDsimple.cfg  setSIT2FLC.cfg  setSIT2FLC.cfg~  setSafeIntelDrone.cfg  setTrajectory_demo.cfg
center_alignment/controllers/data/: expression.txt  neural_network_good.xml
center_alignment/controllers/src/: DNN.cpp  (+13 more)
center_alignment/img_center_alignment/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
center_alignment/perception/: CMakeLists.txt  package.xml
controllers/: CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  CMakeLists.txt~  package.xml  package.xml~
controllers/cfg/: setController.cfg~  setDIT1FLC.cfg  setFNN_IT2.cfg  setNoise1.cfg~  setSIT1FLC.cfg  setSafeY6.cfg  setTrajectory.cfg  setTrajectory.cfg~
controllers/data/: .~lock.pid_x_d.dat#  data_set.xml  neural_network_x.xml  neural_network_y.xml  neural_network_z.xml  results.txt
controllers/data/x/: data_set1.xml  data_set_bebop.xml  expression.txt  expression_bebop.txt  expression_x.txt  neural_network.xml  neural_network1.xml  neural_network_bebop.xml  results.txt
controllers/data/y/: data_set.xml  data_set1.xml  data_set_bebop.xml  expression.txt  expression_y.txt  neural_network1.xml
controllers/data/z/: data_set.xml  expression_bebop.txt  neural_network1.xml  neural_network_bebop.xml  training_strategy_bebop.xml
controllers/data/z1/: expression.txt
controllers/include/controllers/: DI-IT2-FLC-FM.h  DI-T1-FLC-FM.h  DNN.h  PID.h  SE3.h  SI-IT2-FLC-FM.h  SI-IT2-FLC.h  SI-T1-FLC-FM.h  logger.h  noise.h  odometry.h  q_learning.h  safeY6.h  trajectory.h
controllers/launch/: control_Intel_Aero.launch  control_StableMax.launch  control_inteldrone.launch  di_it2_flc_fm.launch  di_t1_flc_fm.launch  pid.launch  si_it2_flc_fm.launch  si_t1_flc_fm.launch
controllers/policy/: q_learning.txt~  waypoints.txt
controllers/src/: DI-IT2-FLC-FM.cpp  DI-IT2-FLC.cpp  DI-T1-FLC-FM.cpp  DNN_test.cpp  FNN-IT2.cpp  FNN.cpp  PID.cpp  SE3.cpp  SI-IT2-FLC-FM.cpp  TestSE3.cpp  logger.cpp  noise.cpp  safeBebop.cpp  safeIntelDrone.cpp  trajectory.cpp
img_center_alignment/: CMakeLists.txt
img_center_alignment/cfg/: PID.cfg
img_center_alignment/launch/: controller.launch
img_center_alignment/src/: Controller.cpp
intel_aero/: mainpage.dox  manifest.xml
intel_aero/launch/: dron_rviz.launch  drone_rviz.launch
intel_aero/urdf/: component_snippets.xacro  model.xacro  model_base.xacro
meshes/gate/: 1.5x1.5_contour.blend  1.5x1.5_frame.blend  1x1_contour.blend  1x1_frame.blend  config.yaml
perception/: CMakeLists.txt  setup.py
perception/model/: gate_pose_estimator.json  gpesti_weights.h5  training_config.yaml
perception/msg/: Bbox.msg  GatePrediction.msg
perception/nodes/: detector_node.py
perception/src/Detector/: Detector.py  img_utils.py
perception/src/Detector/models/layers/utils/: object_detection_2d_data_generator.py  object_detection_2d_geometric_ops.py
report/: .gitignore  Makefile  main.aux  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.ist  main.lof  main.lot  main.out  main.run.xml  main.tex  main.toc  topn-accuracy-results.txt
report/include/: analysis.tex  choice_of_topology.tex  cnn.tex  conclusion.tex  control.tex  dataset_generation.tex  discussion_of_results.tex  drone_racing.tex  future_improvements.tex  implementation.tex  introduction.tex  introduction.tex.bak  network_training.tex  perception.tex  scenarios.tex  theory.tex
report/plots/: dronet_rgb_base_dropout_l2.tex  dronet_rgb_grayscale.tex  dronet_rgb_l2_l2more.tex  handpicked_tsne_2d.pgf  handpicked_tsne_3d.pgf  mobilenetv2_aug.tex  mobilenetv2_base_dropout_hidden_dropout_avg_pooling.tex  mobilenetv2_hidden_dropout_avg_pooling.tex  random_tsne_3d.pfg  vgg16.tex
report/tsne_random/: pca_t-sne_2d.pgf  pca_t-sne_3d.pgf
rotors_simulator/rotors_control/: CMakeLists.txt
test_dataset_maker/: .gitignore  annotate.py  dataset.py  gate_poses.yaml
tsne/: compute.py
(+157 files in other folders)
